src/main/java/com/example/vmrentalrest/exceptions/invalidParametersExceptions/InvalidParametersException.java
package com.example.vmrentalrest.exceptions.invalidParametersExceptions;

public class InvalidParametersException extends Exception {
    public InvalidParametersException(String message) {
        super(message);
    }
}
